--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Marc's Beach Bar</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html, body {
     margin: 0;
@@ -48,19 +49,75 @@ video {
     top: 50%;
     left: 0;
     width: 100%;
-    height: 16px;
+    height: 4vw;
+    max-height: 20px;
+    min-height: 8px;
     background-color: white;
     transform: translateY(-50%);
     z-index: 5;
     opacity: 0;
     transition: opacity 0.3s ease;
+    touch-action: manipulation;
+}
+
+/* Info button */
+#infoBtn {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    background: rgba(255,255,255,0.85);
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 10;
+    user-select: none;
+    transition: background 0.3s ease;
+}
+#infoBtn:hover {
+    background: rgba(255,255,255,1);
+}
+
+/* Aesthetic info overlay */
+#infoOverlay {
+    position: absolute;
+    bottom: 60px;
+    right: 20px;
+    max-width: 200px;
+    padding: 8px 14px;
+    background: rgba(0,0,0,0.7);
+    color: white;
+    font-size: 12px;
+    border-radius: 999px; /* pill shape */
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    pointer-events: auto;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+
+/* Show overlay */
+#infoOverlay.show {
+    opacity: 1;
 }
 </style>
 </head>
 <body>
 
 <div class="video-container">
-    <video id="videoPlayer" loop>
+    <video id="videoPlayer" loop playsinline>
         <source src="marcsbeachbar.mp4" type="video/mp4">
     </video>
 </div>
@@ -69,9 +126,15 @@ video {
 
 <div id="whiteBar"></div>
 
+<!-- Info button and overlay -->
+<div id="infoBtn">i</div>
+<div id="infoOverlay">SPACEBAR / TAP</div>
+
 <script>
 const video = document.getElementById('videoPlayer');
 const whiteBar = document.getElementById('whiteBar');
+const infoBtn = document.getElementById('infoBtn');
+const infoOverlay = document.getElementById('infoOverlay');
 
 let isPlaying = false;
 let hideTimeout;
@@ -101,8 +164,15 @@ function toggleVideo() {
 }
 
 // Interaction listeners
-document.addEventListener('click', toggleVideo);
-document.addEventListener('touchstart', toggleVideo);
+['click','touchstart'].forEach(evt => {
+    document.addEventListener(evt, toggleVideo, {passive: true});
+});
+
+['mousemove','keydown','touchstart','click'].forEach(evt => {
+    document.addEventListener(evt, showBar, {passive: true});
+});
+
+// Desktop spacebar toggle
 document.addEventListener('keydown', e => {
     if(e.code === 'Space') {
         e.preventDefault();
@@ -110,9 +180,10 @@ document.addEventListener('keydown', e => {
     }
 });
 
-// Show bar on any interaction
-['mousemove','keydown','touchstart','click'].forEach(evt => {
-    document.addEventListener(evt, showBar);
+// Info button toggle
+infoBtn.addEventListener('click', (e) => {
+    e.stopPropagation(); // prevent triggering video toggle
+    infoOverlay.classList.toggle('show');
 });
 </script>
 
