--- a/index.html
+++ b/index.html
@@ -2,180 +2,199 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Marc's Beach Bar</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Marc's Beach Bar</title>
 <style>
 html, body {
     margin: 0;
-    height: 100%;
     width: 100%;
-    background: black;
+    height: 100%;
+    background: #000000;
     overflow: hidden;
-    font-family: sans-serif;
+    font-family: 'Segoe UI', sans-serif;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.video-container {
+/* Landing page text */
+.welcome {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    z-index: 3;
+}
+
+.note {
+    font-size: 1rem;
+    margin-top: 20px;
+    color: #cccccc;
+    z-index: 3;
+}
+
+/* White landing bar */
+.bar {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 14px;
+    background-color: white;
+    transform: translateY(-50%);
+    cursor: pointer;
+    z-index: 3;
+    transition: background-color 0.3s ease;
+}
+
+/* Invert colors on hover */
+.invert-background {
+    background-color: white;
+    color: black;
+}
+.invert-background .bar {
+    background-color: black;
+}
+
+/* QR placeholder for landing page */
+#qrTip {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff11;
+    border: 2px solid rgba(255,255,255,0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 3;
+    border-radius: 8px;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.5);
+}
+
+/* Play symbol inside QR tip */
+#qrTip::before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 12px solid white; /* triangle = play symbol */
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+}
+
+/* Video full screen */
+#videoPlayer {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    display: none;
     z-index: 1;
 }
 
-video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
+/* Grid overlay for video */
 .grid-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
     pointer-events: none;
     background-image:
         linear-gradient(to right, rgba(0,0,0,0.3) 1px, transparent 1px),
         linear-gradient(to bottom, rgba(0,0,0,0.3) 1px, transparent 1px);
     background-size: 5px 5px;
+    display: none;
+    z-index: 2;
 }
 
-#whiteBar {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 4vw;
-    max-height: 20px;
-    min-height: 8px;
-    background-color: white;
-    transform: translateY(-50%);
-    z-index: 5;
-}
-
-#infoBtn {
+/* QR code button for video */
+#qrBtn {
     position: absolute;
     bottom: 20px;
     right: 20px;
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    background: rgba(255,255,255,0.85);
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 16px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
-    z-index: 10;
-    user-select: none;
-    transition: background 0.3s ease;
-}
-#infoBtn:hover {
-    background: rgba(255,255,255,1);
-}
-
-#infoOverlay {
-    position: absolute;
-    bottom: 60px;
-    right: 20px;
-    max-width: 200px;
-    padding: 8px 14px;
-    background: rgba(0,0,0,0.7);
-    color: white;
-    font-size: 12px;
-    border-radius: 999px;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    pointer-events: auto;
-    opacity: 0;
-    transition: opacity 0.4s ease;
+    display: none;
+    background-image: url('https://api.qrserver.com/v1/create-qr-code/?size=100x100&data=https://marcsbeachbar.net'); 
+    background-size: cover;
+    border-radius: 0;
     box-shadow: 0 2px 8px rgba(0,0,0,0.4);
-    font-weight: 500;
-    letter-spacing: 0.5px;
-}
-#infoOverlay.show {
-    opacity: 1;
+    z-index: 4;
 }
 </style>
 </head>
 <body>
 
-<div class="video-container">
-    <video id="videoPlayer" loop playsinline preload="auto">
-        <source src="marcsbeachbar.mp4" type="video/mp4">
-    </video>
-</div>
+<div class="welcome">Welcome to the videobook of Marc's Beach Bar</div>
+<div class="bar" id="startBar"></div>
+<div class="note">Start the experience.</div>
 
-<div class="grid-overlay"></div>
-<div id="whiteBar"></div>
-<div id="infoBtn">i</div>
-<div id="infoOverlay">SPACEBAR / TAP</div>
+<!-- QR code tip for landing -->
+<div id="qrTip"></div>
+
+<!-- Video -->
+<video id="videoPlayer" loop playsinline preload="auto">
+    <source src="marcsbeachbar.mp4" type="video/mp4">
+</video>
+
+<!-- Grid overlay -->
+<div class="grid-overlay" id="grid"></div>
+
+<!-- Video QR code button -->
+<div id="qrBtn"></div>
 
 <script>
+const startBar = document.getElementById('startBar');
+const qrTip = document.getElementById('qrTip');
 const video = document.getElementById('videoPlayer');
-const whiteBar = document.getElementById('whiteBar');
-const infoBtn = document.getElementById('infoBtn');
-const infoOverlay = document.getElementById('infoOverlay');
+const grid = document.getElementById('grid');
+const qrBtn = document.getElementById('qrBtn');
+const body = document.body;
 
 let isPlaying = false;
 
-// Show white bar temporarily
-function showBar() {
-    whiteBar.style.opacity = 1;
-    setTimeout(() => {
-        if(isPlaying) whiteBar.style.opacity = 0;
-    }, 1500);
+// Hover effect to invert colors on white bar
+startBar.addEventListener('mouseover', () => {
+    body.classList.add('invert-background');
+});
+startBar.addEventListener('mouseout', () => {
+    body.classList.remove('invert-background');
+});
+
+// Function to start video
+function startVideoExperience() {
+    video.style.display = 'block';
+    grid.style.display = 'block';
+    qrBtn.style.display = 'block'; // QR code active for video
+    qrTip.style.display = 'none'; // hide landing QR tip
+    video.play();
+    isPlaying = true;
+
+    // Hide landing page texts and bar
+    startBar.style.display = 'none';
+    document.querySelector('.welcome').style.display = 'none';
+    document.querySelector('.note').style.display = 'none';
 }
 
-// Toggle video play/pause
-function toggleVideo() {
-    if(!isPlaying) {
-        video.muted = false;
+// Start video by clicking either white bar or landing QR tip
+startBar.addEventListener('click', startVideoExperience);
+qrTip.addEventListener('click', startVideoExperience);
+
+// Toggle video play/pause with QR code on video
+qrBtn.addEventListener('click', () => {
+    if (video.paused) {
         video.play();
-        isPlaying = true;
-        whiteBar.style.opacity = 0;
     } else {
         video.pause();
-        isPlaying = false;
     }
-    showBar();
-}
-
-// Toggle video on tap/click (excluding info button)
-document.addEventListener('click', e => {
-    if(!e.target.closest('#infoBtn')) toggleVideo();
-});
-document.addEventListener('touchend', e => {
-    if(!e.target.closest('#infoBtn')) toggleVideo();
-}, {passive:true});
-
-// Spacebar toggles video on desktop
-document.addEventListener('keydown', e => {
-    if(e.code === 'Space') {
-        e.preventDefault();
-        toggleVideo();
-    }
-});
-
-// Show white bar on interaction
-['mousemove','keydown','touchstart','click'].forEach(evt => {
-    document.addEventListener(evt, showBar, {passive:true});
-});
-
-// Info button toggle
-['click','touchend'].forEach(evt => {
-    infoBtn.addEventListener(evt, e => {
-        e.stopPropagation();
-        infoOverlay.classList.toggle('show');
-    }, {passive:true});
 });
 </script>
 
