--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@ html, body {
 
 /* Landing page text */
 .welcome {
-    font-size: 1.8rem;
+    font-size: clamp(1rem, 5vh, 2.5rem);
     margin-bottom: 20px;
+    max-height: 40%;
     z-index: 3;
 }
 
+.welcome sup {
+    font-size: 0.6em; /* smaller TM */
+    vertical-align: super;
+}
+
 .note {
-    font-size: 1rem;
+    font-size: clamp(0.8rem, 2.5vh, 1.2rem);
     margin-top: 20px;
     color: #cccccc;
     z-index: 3;
@@ -81,9 +87,19 @@ html, body {
     display: block;
     width: 0;
     height: 0;
-    border-left: 12px solid white; /* triangle = play symbol */
+    border-left: 12px solid white;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
+}
+
+/* Container for fullscreen elements */
+#videoContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
 }
 
 /* Video full screen */
@@ -94,7 +110,6 @@ html, body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    display: none;
     z-index: 1;
 }
 
@@ -110,7 +125,6 @@ html, body {
         linear-gradient(to right, rgba(0,0,0,0.3) 1px, transparent 1px),
         linear-gradient(to bottom, rgba(0,0,0,0.3) 1px, transparent 1px);
     background-size: 5px 5px;
-    display: none;
     z-index: 2;
 }
 
@@ -122,79 +136,199 @@ html, body {
     width: 50px;
     height: 50px;
     cursor: pointer;
-    display: none;
-    background-image: url('https://api.qrserver.com/v1/create-qr-code/?size=100x100&data=https://marcsbeachbar.net'); 
+    background-image: url('https://api.qrserver.com/v1/create-qr-code/?size=100x100&data=https://marcsbeachbar.net');
     background-size: cover;
     border-radius: 0;
     box-shadow: 0 2px 8px rgba(0,0,0,0.4);
-    z-index: 4;
+    z-index: 3;
+}
+
+/* Info button */
+#infoBtn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255,255,255,0.2);
+    border: 2px solid white;
+    border-radius: 50%;
+    color: white;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 5;
+    transition: opacity 0.5s ease, transform 0.2s ease;
+    opacity: 1; /* visible by default */
+}
+
+#infoBtn:hover {
+    background-color: rgba(255,255,255,0.4);
+    transform: scale(1.1);
+}
+
+/* Info overlay */
+#infoOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.85);
+    color: white;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    z-index: 10;
+    flex-direction: column;
+}
+
+#infoOverlay p {
+    margin: 5px 0;
+    font-size: 1.2rem;
+}
+
+#infoOverlay .closeBtn {
+    margin-top: 20px;
+    padding: 8px 16px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
 }
 </style>
 </head>
 <body>
 
-<div class="welcome">Welcome to the videobook of Marc's Beach Bar</div>
+<!-- Welcome text with smaller TM -->
+<div class="welcome">Welcome to the <span style="white-space: nowrap;">Videopage<sup>TM</sup></span> of Marc's Beach Bar</div>
 <div class="bar" id="startBar"></div>
 <div class="note">Start the experience.</div>
 
-<!-- QR code tip for landing -->
+<!-- Landing QR -->
 <div id="qrTip"></div>
 
-<!-- Video -->
-<video id="videoPlayer" loop playsinline preload="auto">
-    <source src="marcsbeachbar.mp4" type="video/mp4">
-</video>
+<!-- Single Info button -->
+<div id="infoBtn">i</div>
 
-<!-- Grid overlay -->
-<div class="grid-overlay" id="grid"></div>
+<!-- Info overlay -->
+<div id="infoOverlay">
+    <p>Videopage™ is designed by Kobus Liebenberg</p>
+    <p>Cell: +27 66 121 8440</p>
+    <p>Email: kobus.email@gmail.com</p>
+    <button class="closeBtn">Close</button>
+</div>
 
-<!-- Video QR code button -->
-<div id="qrBtn"></div>
+<!-- Video + overlay container -->
+<div id="videoContainer">
+    <video id="videoPlayer" loop playsinline preload="auto">
+        <source src="marcsbeachbar.mp4" type="video/mp4">
+    </video>
+    <div class="grid-overlay" id="grid"></div>
+    <div id="qrBtn"></div>
+</div>
 
 <script>
 const startBar = document.getElementById('startBar');
 const qrTip = document.getElementById('qrTip');
+const videoContainer = document.getElementById('videoContainer');
 const video = document.getElementById('videoPlayer');
 const grid = document.getElementById('grid');
 const qrBtn = document.getElementById('qrBtn');
-const body = document.body;
+const infoBtn = document.getElementById('infoBtn');
+const infoOverlay = document.getElementById('infoOverlay');
+const closeBtn = document.querySelector('.closeBtn');
+let infoTimeout;
 
-let isPlaying = false;
+// Hover effect
+startBar.addEventListener('mouseover', () => document.body.classList.add('invert-background'));
+startBar.addEventListener('mouseout', () => document.body.classList.remove('invert-background'));
 
-// Hover effect to invert colors on white bar
-startBar.addEventListener('mouseover', () => {
-    body.classList.add('invert-background');
-});
-startBar.addEventListener('mouseout', () => {
-    body.classList.remove('invert-background');
-});
-
-// Function to start video
+// Start video
 function startVideoExperience() {
-    video.style.display = 'block';
-    grid.style.display = 'block';
-    qrBtn.style.display = 'block'; // QR code active for video
-    qrTip.style.display = 'none'; // hide landing QR tip
-    video.play();
-    isPlaying = true;
+    videoContainer.style.display = 'block';
+    video.play().catch(err => console.log("Autoplay blocked:", err));
 
-    // Hide landing page texts and bar
     startBar.style.display = 'none';
     document.querySelector('.welcome').style.display = 'none';
     document.querySelector('.note').style.display = 'none';
+    qrTip.style.display = 'none';
+
+    // Fade out info button
+    infoBtn.style.opacity = '0';
+
+    // Request fullscreen
+    const requestFullScreen =
+        videoContainer.requestFullscreen ||
+        videoContainer.webkitRequestFullscreen ||
+        videoContainer.msRequestFullscreen ||
+        videoContainer.mozRequestFullScreen;
+
+    if (requestFullScreen) requestFullScreen.call(videoContainer).catch(err => console.log("Fullscreen prevented:", err));
 }
 
-// Start video by clicking either white bar or landing QR tip
+// Start video on click
 startBar.addEventListener('click', startVideoExperience);
 qrTip.addEventListener('click', startVideoExperience);
 
-// Toggle video play/pause with QR code on video
-qrBtn.addEventListener('click', () => {
-    if (video.paused) {
-        video.play();
-    } else {
-        video.pause();
+// Toggle play/pause via QR button
+qrBtn.addEventListener('click', () => video.paused ? video.play() : video.pause());
+
+// Tap container to play/pause
+videoContainer.addEventListener('click', e => { if (e.target !== qrBtn && e.target !== infoBtn) video.paused ? video.play() : video.pause(); });
+
+// Show info overlay
+infoBtn.addEventListener('click', () => infoOverlay.style.display = 'flex');
+
+// Close overlay and reset landing page
+closeBtn.addEventListener('click', () => {
+    infoOverlay.style.display = 'none';
+    video.pause();
+    video.currentTime = 0;
+    videoContainer.style.display = 'none';
+    startBar.style.display = 'block';
+    document.querySelector('.welcome').style.display = 'block';
+    document.querySelector('.note').style.display = 'block';
+    qrTip.style.display = 'flex';
+    infoBtn.style.opacity = '1';
+});
+
+// Click outside overlay to close
+infoOverlay.addEventListener('click', e => { if (e.target === infoOverlay) closeBtn.click(); });
+
+// Secret keybind Ctrl + G to toggle grid
+document.addEventListener('keydown', e => {
+    if (e.ctrlKey && e.key.toLowerCase() === 'g') {
+        grid.style.display = (grid.style.display === 'none' || grid.style.display === '') ? 'block' : 'none';
     }
+});
+
+// Handle info button visibility
+function updateInfoButton() {
+    if (video.paused) {
+        infoBtn.style.opacity = '1';
+        clearTimeout(infoTimeout);
+        infoTimeout = setTimeout(() => {
+            if (!video.paused) infoBtn.style.opacity = '0';
+        }, 3000);
+    } else {
+        infoBtn.style.opacity = '0';
+    }
+}
+
+// Listen for pause/play events
+video.addEventListener('pause', updateInfoButton);
+video.addEventListener('play', updateInfoButton);
+
+// Handle fullscreen changes (ESC exit)
+['fullscreenchange', 'webkitfullscreenchange', 'mozfullscreenchange', 'MSFullscreenChange'].forEach(eventType => {
+    document.addEventListener(eventType, updateInfoButton);
 });
 </script>
 
